--- a/xcodebuild/yq2.xcodeproj/xcshareddata/xcschemes/quake2.xcscheme
+++ b/xcodebuild/yq2.xcodeproj/xcshareddata/xcschemes/quake2.xcscheme
@@ -60,12 +60,12 @@
          <EnvironmentVariable
             key = "MallocStackLoggingNoCompact"
             value = "1"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </EnvironmentVariable>
          <EnvironmentVariable
             key = "NSZombieEnabled"
             value = "YES"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </EnvironmentVariable>
       </EnvironmentVariables>
    </LaunchAction>
