load Metal renderer dylib in refresher init

--- a/xcodebuild/yq2.xcodeproj/xcshareddata/xcschemes/quake2.xcscheme
+++ b/xcodebuild/yq2.xcodeproj/xcshareddata/xcschemes/quake2.xcscheme
@@ -52,7 +52,7 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "+set vid_renderer gl3"
+            argument = "+set vid_renderer metal"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
